 
<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="true"
    android:background="@drawable/bb7"
    android:orientation="vertical" 
     >
  <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bb8"
        android:gravity="center"
        android:paddingBottom="10sp"
        android:paddingTop="10sp"
        android:text="@string/editProfile"
        
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

  
  <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="100" 
        android:padding="10dp">

        <TextView
            android:id="@+id/profileNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:text="@string/name" />

  <EditText
            android:inputType="text"
            android:id="@+id/profileEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_weight="65"
            android:hint="@string/profileNameHint" />
    </LinearLayout>

   <Switch
            android:id="@+id/wifiSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:text="@string/wifi" />

        <Switch
            android:id="@+id/bluetoothSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:text="@string/bluetooth" />

   <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
                 android:text="@string/brightness"
                 android:textSize="15sp"
                 android:padding="10dp"/>

             <SeekBar
                 android:id="@+id/brightnessBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:minWidth="150dp"
                 android:padding="10dp" />
             
              <TextView
                 android:id="@+id/mediaVolume"
                 android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="15sp"
                 android:text="@string/mediaVolume"
                 android:padding="10dp"/>

             <SeekBar
                 android:id="@+id/mediaBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minWidth="100dp"
                 android:padding="10dp"/>

  
             <TextView
                 android:id="@+id/textView5"
                 android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="15sp"
                 android:text="@string/ringtone"
                 android:padding="10dp"/>

             <SeekBar
                 android:id="@+id/ringtoneBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minWidth="100dp"
                 android:padding="10dp"/>
      
   <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="15sp"
                 android:text="@string/notification"
                 android:textColor="@android:color/white"
                 android:padding="10dp"/>

             <SeekBar
                 android:id="@+id/notificationBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minWidth="100dp"
                 android:padding="10dp"/>
      <TextView
                 android:id="@+id/alarmText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="15sp"
                 android:text="@string/alarmVolume"
                 android:textColor="@android:color/white"
                 android:padding="10dp"/>

             <SeekBar
                 android:id="@+id/alarmBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minWidth="100dp"
                 android:padding="10dp"/>       

             <CheckBox
                 android:id="@+id/enablecheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/enableAutomatic"
                 android:textColor="@android:color/white" />
       
	<Button 
	    android:id="@+id/submitButton"
	    android:text="@string/submit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:background="@drawable/bb220"
	    />         
    
 </LinearLayout>
    
</ScrollView>
