<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb18" >

     <TextView
         android:id="@+id/textView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/bb8"
         android:text="@string/profilemanager"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         android:gravity="center" 
         android:paddingTop="10sp"
         android:paddingBottom="10sp"/>

     <Button
         android:id="@+id/callButton"
         android:gravity="center"
         android:layout_width="180dp"
         android:layout_height="50dp"
         android:layout_above="@+id/smsButton"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="60dp"
         android:text="@string/call"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
         android:textStyle="bold"
         android:background="@drawable/bb10" 
          />

     <Button
         android:id="@+id/profileButton"
         android:layout_width="180dp"
         android:layout_height="50dp"
         android:layout_below="@+id/smsButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
            android:background="@drawable/bb12"
         android:text="@string/profile"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
         android:textStyle="bold"
      
          />

     <Button
         android:id="@+id/smsButton"
         android:layout_width="180dp"
         android:layout_height="50dp"
         android:layout_alignRight="@+id/callButton"
         android:layout_centerVertical="true"
         android:background="@drawable/bb22"
         android:text="@string/sms"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
         android:textStyle="bold" />

</RelativeLayout>