<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bb8"
        android:gravity="center"
        android:paddingBottom="10sp"
        android:paddingTop="10sp"
        android:text="@string/smsLog"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rec_shape">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="100" >

        <TextView
            android:id="@+id/contactNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:singleLine="true"
            android:text="@string/name"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/contactName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="65"
            android:paddingLeft="24dp"
            android:singleLine="true"
            android:text="@string/contactName"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="100" >

        <TextView
            android:id="@+id/numberText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="35"
            android:gravity="center_vertical"
            android:text="@string/contactNumber"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="65"
            android:paddingLeft="24dp"
            android:textColor="#32CD32"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="100" >

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="35"
            android:singleLine="true"
            android:text="@string/msgTime"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="65"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>
    </LinearLayout>

</LinearLayout>